--- a/NotABadPlayer/app/src/main/res/layout/layout_settings_keybinds.xml
+++ b/NotABadPlayer/app/src/main/res/layout/layout_settings_keybinds.xml
@@ -202,6 +202,28 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/settings_keybind_player_volume"
+            android:textAppearance="@style/PrimaryText"
+            android:singleLine="true"/>
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <Spinner
+            android:id="@+id/keybindPlayerVolume"
+            android:layout_width="128dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/settings_item_border"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/settings_keybind_qplayer_volume_up"
             android:textAppearance="@style/PrimaryText"
             android:singleLine="true"/>
