--- a/NotABadPlayer/app/src/main/res/layout/activity_main.xml
+++ b/NotABadPlayer/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         <LinearLayout
             android:id="@+id/mainLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal"/>
 
