Added loading spinner for the settigns screen to improve UX feel

--- a/NotABadPlayer/app/src/main/res/layout/fragment_settings.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_settings.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_base">
+
+    <ProgressBar
+        android:id="@+id/progressIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_centerInParent="true"/>
     
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
+            android:id="@+id/settingsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -22,4 +30,4 @@
         </LinearLayout>
     </ScrollView>
     
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
