--- a/NotABadPlayer/app/src/main/res/layout/fragment_playlists.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_playlists.xml
@@ -1,53 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/background_base">
+    
+    <ProgressBar
+        android:id="@+id/progressIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_centerInParent="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal">
-        <Button
-            android:id="@+id/createPlaylistButton"
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/playlist_create"
-            android:textAppearance="@style/GenericButtonText"
-            android:background="@drawable/background_button"/>
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal">
+            <Button
+                android:id="@+id/createPlaylistButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/playlist_create"
+                android:textAppearance="@style/GenericButtonText"
+                android:background="@drawable/background_button"/>
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/deletePlaylistButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/playlist_delete"
+                android:textAppearance="@style/GenericButtonText"
+                android:background="@drawable/background_button"/>
+            <Button
+                android:id="@+id/donePlaylistButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/playlist_done"
+                android:textAppearance="@style/GenericButtonText"
+                android:background="@drawable/background_button"
+                android:visibility="gone"/>
+        </LinearLayout>
+
         <Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <Button
-            android:id="@+id/deletePlaylistButton"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="5dp" />
+
+        <ListView
+            android:id="@+id/playlistsList"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/playlist_delete"
-            android:textAppearance="@style/GenericButtonText"
-            android:background="@drawable/background_button"/>
-        <Button
-            android:id="@+id/donePlaylistButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/playlist_done"
-            android:textAppearance="@style/GenericButtonText"
-            android:background="@drawable/background_button"
-            android:visibility="gone"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" />
     </LinearLayout>
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="5dp" />
-
-    <ListView
-        android:id="@+id/playlistsList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" />
-
-</LinearLayout>
+</RelativeLayout>
