--- a/NotABadPlayer/app/src/main/res/layout/item_album.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_album.xml
@@ -15,7 +15,7 @@
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:textAppearance="@style/ListItemText"
         android:lines="2"
         android:gravity="center_horizontal"/>
