--- a/NotABadPlayer/app/src/main/res/layout/fragment_settings.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_settings.xml
@@ -13,7 +13,8 @@
     
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:overScrollMode="never">
         <LinearLayout
             android:id="@+id/settingsLayout"
             android:layout_width="match_parent"
