--- a/NotABadPlayer/app/src/main/res/layout/fragment_albums.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_albums.xml
@@ -20,6 +20,7 @@
         android:layout_marginRight="16dp"
         android:numColumns="2"
         android:gravity="center"
+        android:listSelector="@android:color/transparent"
         android:overScrollMode="never"/>
     
     <FrameLayout
