--- a/NotABadPlayer/app/src/main/res/values/styles.xml
+++ b/NotABadPlayer/app/src/main/res/values/styles.xml
@@ -188,4 +188,9 @@
         <item name="android:textSize">14sp</item>
         <item name="android:typeface">monospace</item>
     </style>
+
+    <!-- Splash screen image -->
+    <style name="splashScreenTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
 </resources>
