--- a/NotABadPlayer/app/src/main/res/layout/fragment_playlist.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_playlist.xml
@@ -26,6 +26,8 @@
         android:minLines="1"
         android:maxLines="2"
         android:visibility="gone"
-        android:background="?albumTitleHeaderBackgroundColor"/>
+        android:background="?albumTitleHeaderBackgroundColor"
+        android:clickable="true"
+        android:focusable="false"/>
 
 </RelativeLayout>
