Added color for vertical scroll bar

--- a/NotABadPlayer/app/src/main/res/layout/activity_create_playlist.xml
+++ b/NotABadPlayer/app/src/main/res/layout/activity_create_playlist.xml
@@ -67,7 +67,8 @@
             android:id="@+id/addedTracksList"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:overScrollMode="never" />
+            android:overScrollMode="never"
+            android:scrollbarThumbVertical="@drawable/vertical_scroll_bar" />
 
         <TextView
             android:layout_width="match_parent"
@@ -83,7 +84,7 @@
             android:id="@+id/albumsList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:overScrollMode="never" />
+            android:scrollbarThumbVertical="@drawable/vertical_scroll_bar" />
     </LinearLayout>
 
 </LinearLayout>
