--- a/NotABadPlayer/app/src/main/res/values/styles.xml
+++ b/NotABadPlayer/app/src/main/res/values/styles.xml
@@ -28,6 +28,7 @@
         <item name="genericBorderBackgroundColor">@color/genericBorderBackground</item>
         <item name="albumTitleHeaderBackgroundColor">@color/albumTitleHeaderBackground</item>
         <item name="borderOutlineColor">@color/borderOutline</item>
+        <item name="verticalScrollBarColor">@color/verticalScrollBar</item>
     </style>
     <style name="Dark" parent="Theme.AppCompat.NoActionBar">
         <item name="primaryTextColor">@color/primaryTextInverted</item>
@@ -57,6 +58,7 @@
         <item name="genericBorderBackgroundColor">@color/genericBorderBackgroundInverted</item>
         <item name="albumTitleHeaderBackgroundColor">@color/albumTitleHeaderBackgroundInverted</item>
         <item name="borderOutlineColor">@color/borderOutlineInverted</item>
+        <item name="verticalScrollBarColor">@color/verticalScrollBarInverted</item>
     </style>
     <style name="Mix" parent="Theme.AppCompat.NoActionBar">
         <item name="primaryTextColor">@color/primaryText</item>
@@ -86,6 +88,7 @@
         <item name="genericBorderBackgroundColor">@color/genericBorderBackground</item>
         <item name="albumTitleHeaderBackgroundColor">@color/albumTitleHeaderBackground</item>
         <item name="borderOutlineColor">@color/borderOutline</item>
+        <item name="verticalScrollBarColor">@color/verticalScrollBar</item>
     </style>
 
     <!-- Text -->
