--- a/NotABadPlayer/app/src/main/res/layout/fragment_playlist.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_playlist.xml
@@ -12,7 +12,8 @@
         android:numColumns="1"
         android:verticalSpacing="1dp"
         android:gravity="center"
-        android:overScrollMode="never"/>
+        android:overScrollMode="never"
+        android:scrollbarThumbVertical="@null"/>
 
     <TextView
         android:id="@+id/albumTitleHeader"
