--- a/NotABadPlayer/app/src/main/res/layout/item_playlist.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_playlist.xml
@@ -7,14 +7,20 @@
     
     <ImageView
         android:id="@+id/albumCover"
-        android:layout_width="64dp"
+        android:layout_width="52dp"
         android:layout_height="match_parent"
-        android:src="@drawable/cover_art_none"/>
+        android:src="@drawable/cover_art_none"
+        android:scaleType="fitXY"/>
+    
+    <Space
+        android:layout_width="6dp"
+        android:layout_height="0dp" />
     
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_gravity="center_vertical"
         android:layout_weight="1">
         <TextView
             android:id="@+id/title"
@@ -33,7 +39,7 @@
     <ImageButton
         android:id="@+id/removeButton"
         android:layout_width="64dp"
-        android:layout_height="64dp" 
+        android:layout_height="match_parent"
         android:visibility="gone"
         android:src="@drawable/remove"
         android:tint="?genericButtonBackgroundColor"
