--- a/NotABadPlayer/app/src/main/res/layout/item_playlist_track.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_playlist_track.xml
@@ -2,19 +2,25 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
+    android:layout_height="52dp"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/albumCover"
-        android:layout_width="64dp"
+        android:layout_width="48dp"
         android:layout_height="match_parent"
-        android:src="@drawable/cover_art_none"/>
+        android:src="@drawable/cover_art_none"
+        android:scaleType="fitXY"/>
+
+    <Space
+        android:layout_width="6dp"
+        android:layout_height="0dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical">
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
