--- a/NotABadPlayer/app/src/main/res/layout/item_search_result.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_search_result.xml
@@ -42,12 +42,25 @@
             android:layout_width="10dp"
             android:layout_height="0dp" />
 
-        <TextView
-            android:id="@+id/duration"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/ListItemSubtext"
-            android:singleLine="true"/>
+            android:orientation="horizontal"
+            android:layout_gravity="center_vertical">
+            <ImageView
+                android:id="@+id/favoriteIcon"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginRight="4dp"
+                android:src="@drawable/shiny_star"
+                android:visibility="gone" />
+            <TextView
+                android:id="@+id/duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/ListItemSubtext"
+                android:singleLine="true" />
+        </LinearLayout>
     </LinearLayout>
     
 </LinearLayout>
